# unihive-native-libs

./: LICENSE  README.md
osx/: libcrypto.1.0.0.dylib
osx/coinhivelib/: Info.plist  unihivelib.cpp  unihivelib.h
osx/coinhivelib.xcodeproj/: project.pbxproj
osx/coinhivelib.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
osx/coinhivelib.xcodeproj/project.xcworkspace/xcuserdata/asosnovskiy.xcuserdatad/: UserInterfaceState.xcuserstate
osx/console/: main.cpp
osx/miner/: .gitignore  CMakeLists.txt  executor.cpp  executor.h  jconf.cpp  jconf.h  jpsock.cpp  minethd.cpp  minethd.h  msgstruct.h  unihivelib.cpp
osx/miner/crypto/: c_blake256.c  c_blake256.h  c_groestl.c  c_groestl.h  c_jh.c  c_keccak.c  c_keccak.h  cryptonight_aesni.h  soft_aes.c
